Correções, ajustes e troca de qualidade das imagens para melhorar performance.

--- a/index.html
+++ b/index.html
@@ -628,9 +628,12 @@
             </div>
             <div class="col-right">
                 <h1 class="section-title">About <span>me</span></h1>
-                <h2>Developer</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                <h2>Full Stack Developer</h2>
+                <p>I have a bachelor's degree in Computer Science, 
+                    I am currently studying an MBA in Mobile Development (Android and Hybrid with Flutter and React Native) 
+                    and taking a React course. I've worked in large companies that stand out in their segments, 
+                    where I could always learn new things and add value with my work. 
+                    I have a profile of a very communicative person, who is easy to work in a team.
                 </p>
                 <a href="assets/Gabriel_Bazante_CV___PT_BR.pdf" download="Gabriel Bazante CV_PT" class="cta">Download PT Resume</a>
                 <a href="assets/Gabriel_Bazante_CV___English.pdf" download="Gabriel Bazante CV_EN" class="cta">Download EN Resume</a>
