Links das redes sociais

--- a/index.html
+++ b/index.html
@@ -691,27 +691,27 @@
             <h2>Your Complete Developer Solution</h2>
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="#">
+                    <a href="https://web.facebook.com/gabriel.bazante">
                         <img src="/img/icons/icone_facebook.png"/>
                     </a>
                 </div>
                 <div class="social-item">
-                    <a href="#">
+                    <a href="https://www.instagram.com/gabrielbazante/">
                         <img src="/img/icons/icone_instagram.png"/>
                     </a>
                 </div>
                 <div class="social-item">
-                    <a href="#">
+                    <a href="https://twitter.com/gabriel_bazante">
                         <img src="/img/icons/icone_twitter.png"/>
                     </a>
                 </div>
                 <div class="social-item">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/gabrielbazante/">
                         <img src="/img/icons/icone_linkedin.png"/>
                     </a>
                 </div>
                 <div class="social-item">
-                    <a href="#">
+                    <a href="https://github.com/gabrielbazante">
                         <img src="/img/icons/icone_github.png"/>
                     </a>
                 </div>
