Criação de botao para ver mais projetos

--- a/index.html
+++ b/index.html
@@ -452,6 +452,14 @@
                 </div>
                 <!-- MV Sistemas Project End -->
             </div>
+            <div>
+                <a href="https://github.com/gabrielbazante?tab=repositories"
+                    style="display: flex; justify-content: center; align-items: center;" class="cta">
+                    See more projects on my 
+                    <img class="icon-github-name" src="/img/icons/github_name_white.png" alt="">
+                    <img class="icon-github-name" style="width: 40px;" src="/img/icons/github_logo_white.png"/>
+                </a>
+            </div>
         </div>
     </section>
     <!-- End Projects Section -->
