--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;800&display=swap"
         rel="stylesheet">
-    <title>GBAZADEV</title>
+    <link rel="shortcut icon" href="/img/logo/fav_icon_bazadev.png" type="image/x-icon">    
+    <title>GBazaDev.</title>
 </head>
 
 <body>
@@ -39,7 +40,7 @@
     <!-- Hero Section -->
     <section id="hero">
         <div class="hero container">
-            <div>
+            <div class="block-presentation">
                 <h1>Hello,<span></span></h1>
                 <h1>My name is <span></span></h1>
                 <h1>Gabriel Bazante <span></span></h1>
